<resources>
    <string name="app_name">lauta</string>
    <string name="logo_desc">Logo del IFTS29</string>
    <string name="initial_lang">Español</string>
    <string name="saved_users">Usuarios guardados</string>
    <string name="user_logo_desc">Foto del usuario</string>
    <string name="carousel_user_name">Usuario</string>
    <string name="other_user">Otro usuario</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="save_user">Guardar</string>
    <string name="login">Ingresar</string>
    <string name="welcome">Bienvenido</string>
    <string name="activities">Actividades</string>
    <string name="calendar">Calendario</string>
    <string name="client">Clientes</string>
    <string name="user">Usuarios</string>
    <string name="settings">Ajustes</string>
    <string name="lang_selection">Elegir idioma</string>
    <string name="search_hint">Buscar</string>
    <string name="settings_random">Modo oscuro</string>
    <string name="activity_random">Salto a caballo</string>
    <string name="create">Crear</string>
    <string name="sort_def">A-Z</string>
    <string name="sort_selection">Ordenar por</string>
    <string name="sort_new">Mas nuevo</string>
    <string name="sort_old">Mas viejo</string>
    <string name="edit_desc">Editar actividad</string>
    <string name="del_desc">Eliminar actividad</string>
    <string name="create_activity">Crear actividad</string>
    <string name="create_activity_name">Nombre</string>
    <string name="create_activity_desc">Descripción</string>
    <string name="create_activity_teacher">Profesor que dicta</string>
    <string name="create_activity_max">Límite de inscripciones</string>
    <string name="create_activity_time">Hora</string>
    <string name="create_activity_day">Día</string>
    <string name="create_client">Crear cliente</string>
    <string name="create_client_name">Nombre</string>
    <string name="create_client_lastname">Apellido</string>
    <string name="create_client_age">Edad</string>
    <string name="create_client_dni">Documento Nacional de Identidad</string>
    <string name="socio">Socio</string>
    <string name="nosocio">No Socio</string>
    <string name="close">Cerrar</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="no_activities">No hay actividades aún</string>
    <string name="no_clients">No hay clientes aún</string>
    <string name="new_to_activity">Agregar nuevo</string>
    <string name="show_vencidas">Vence hoy</string>
</resources>
