<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_activities"
        android:icon="@drawable/list"
        android:title="@string/activities"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_calendar"
        android:icon="@drawable/calendar"
        android:title="@string/calendar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_client"
        android:icon="@drawable/client"
        android:title="@string/client"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_user"
        android:icon="@drawable/user"
        android:title="@string/user"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>