<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/create_client"
            android:textSize="18sp"/>

        <ImageButton
            android:id="@+id/btnCloseDialog"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/close"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/close"/>

    </LinearLayout>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/create_client_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/create_client_lastname"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/create_client_age"
        android:inputType="number"/>

    <EditText
        android:id="@+id/etDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/create_client_dni"
        android:inputType="number"/>

    <CheckBox
        android:id="@+id/cbSocio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/socio"
        android:checked="true"
        android:layout_marginTop="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/btnCancelDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/btnSaveDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginStart="12dp"/>
    </LinearLayout>
</LinearLayout>
