<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="?attr/colorSurface"
    tools:context=".LoginFromZeroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="24dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/logo_desc"
                android:src="@drawable/ifts29_icon_192x192" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialSplitButton
                android:id="@+id/splitbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    style="?attr/materialSplitButtonLeadingFilledStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_lang"
                    app:icon="@drawable/language"
                    />
                <Button
                    style="?attr/materialSplitButtonIconFilledStyle"
                    android:id="@+id/expand_more_or_less_filled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/lang_selection"
                    app:icon="@drawable/m3_split_button_chevron_avd"
                    />
            </com.google.android.material.button.MaterialSplitButton>
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved_users"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/inter_light"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="24dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp"
                    android:layout_marginEnd="24dp"
                    android:foreground="?attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/person_avatar"
                            android:contentDescription="@string/user_logo_desc" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/carousel_user_name"
                            android:textAppearance="?attr/textAppearanceBodyMedium"
                            android:layout_marginTop="8dp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp"
                    android:layout_marginEnd="24dp"
                    android:foreground="?attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/person_avatar"
                            android:contentDescription="@string/user_logo_desc" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/carousel_user_name"
                            android:textAppearance="?attr/textAppearanceBodyMedium"
                            android:layout_marginTop="8dp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp"
                    android:layout_marginEnd="24dp"
                    android:foreground="?attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/person_avatar"
                            android:contentDescription="@string/user_logo_desc" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/carousel_user_name"
                            android:textAppearance="?attr/textAppearanceBodyMedium"
                            android:layout_marginTop="8dp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </HorizontalScrollView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_user"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/inter_light"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:endIconMode="clear_text"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="48dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="48dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="52dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_user"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:fontFamily="@font/inter_light"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
        </LinearLayout>


        <Button
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="20dp"
            app:icon="@drawable/send"
            android:checkable="true"
            />
    </LinearLayout>
</ScrollView>