<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ManageActivitiesActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:layout_marginBottom="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint"
                app:navigationIcon="@drawable/search"
                android:layout_marginHorizontal="24dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="24dp">

                <Button
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/btnCreate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    app:icon="@drawable/add"
                    android:checkable="true"
                    app:strokeColor="@color/md_theme_light_primary"
                    />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialSplitButton
                    android:id="@+id/btnSort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        style="?attr/materialSplitButtonLeadingFilledStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sort_def"
                        app:icon="@drawable/swap_vert"
                        />
                    <Button
                        style="?attr/materialSplitButtonIconFilledStyle"
                        android:id="@+id/expand_more_or_less_filled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/sort_selection"
                        app:icon="@drawable/m3_split_button_chevron_avd"
                        />
                </com.google.android.material.button.MaterialSplitButton>
            </LinearLayout>

            <TextView
                android:id="@+id/tvEmptyActivities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_activities"
                android:textAlignment="center"
                android:padding="16dp"
                android:textSize="16sp"
                android:visibility="gone" />

            <ScrollView
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <LinearLayout
                    android:id="@+id/activitiesContainer"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?attr/colorSurfaceContainer"
        app:menu="@menu/bottom_navigation_menu"
        app:labelVisibilityMode="labeled"
        app:elevation="8dp"
        app:itemIconTint="@color/bottom_nav_icon_color"
        app:itemTextColor="@color/bottom_nav_text_color" />
</FrameLayout>
